// @@@ START COPYRIGHT @@@
//
// (C) Copyright 2015 Hewlett-Packard Development Company, L.P.
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.
//
// @@@ END COPYRIGHT @@@

import "common.event_header.proto";
import "common.qpid_header.proto";

package common;

//
//  text_event 
//
//  This message is used for the text representation of events. The text
//  representation is created by the event consumer, from tokenized events
//  generated by subsystems. In the short term, some subsystems will 
//  generate text events directly, but longer term they will all switch
//  to a tokenized format.
//

message text_event
{
     required event_header  header         = 1;         // common header for all event messages
     required string        text           = 2;         // the text string for the event

     // the next field is populated by the UNC when it republishes an
     // event in text form; this field is absent for subsystems that 
     // publish text events directly

     optional string        tokenized_event_repos_table = 10;  // name of repos table holding tokenized event info
}
